--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body{
+    max-width: 1200px;
+}
 .header{
     background: rgb(223, 229, 229);
     height: 18% ;
@@ -20,7 +23,7 @@
             }
             ul li {
                 display: inline-block;
-                margin-left: 50px  
+                margin-left: 10px;
             }
                 .main ul li a:hover{
                     background: white;
@@ -65,6 +68,7 @@ main{
         background: white;
         color: black;
     }
-.row{ 
-    padding-top: 10%; 
-}
+.container.form {
+        margin-left: 50%;
+        margin-top: 20%;
+    }
